--- a/scss/fonts.scss
+++ b/scss/fonts.scss
@@ -26,6 +26,11 @@
     font-family: PnCONthin;
     src: url(../fonts/FontsFree-Net-Proxima-Nova-Cond-Thin.otf);
   }
+  @font-face {
+    font-family: GSbold;
+    src: url(../fonts/Gill\ Sans\ Bold.otf);
+  }
+
 
 .Nav-White {
   border-bottom: 2px solid #fff;
